[project]
name = "APIDiscovery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.6"
dependencies = [
    "accelerate>=1.12.0",
    "anthropic>=0.86.0",
    "click>=8.3.1",
    "coverage>=7.13.5",
    "datasets>=4.4.2",
    "einops>=0.8.1",
    "huggingface-hub>=0.36.0",
    "numpy>=2.4.3",
    "openai>=2.15.0",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "protobuf>=6.33.4",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "tokenizers>=0.22.2",
    "torch==2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "transformers>=4.57.5",
]
